syntax = "proto3";
package volumefi.paloma.valset;

// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/palomachain/paloma/x/valset/types";

// Msg defines the Msg service.
service Msg {
  rpc AddExternalChainInfoForValidator(MsgAddExternalChainInfoForValidator) returns (MsgAddExternalChainInfoForValidatorResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgAddExternalChainInfoForValidator {
  string creator = 1;
  repeated ChainInfo chainInfos = 2;
}

message ChainInfo {
  string chainID = 1;
  string address = 2;
  bytes pubKey = 3;
}
message MsgAddExternalChainInfoForValidatorResponse {
}

// this line is used by starport scaffolding # proto/tx/message
